# heartlib-gb10

./: 0001-fix-add-CUDA-enabled-PyTorch-support-for-GB10.patch  README.md  SUPPORTED_TAGS.md  pyproject.toml
docs/: ADVANCED_OPTIMIZATION_RESEARCH.md  GB10_HARDWARE_CORRECTION.md  GB10_OPTIMIZATION_PLAN.md  VOICE_CLONING_RESEARCH.md  WEB_FRONTEND_PLAN.md
examples/: run_music_generation.py
scripts/: benchmark.py  deploy.sh  start.sh  stop.sh
src/heartlib/patches/: __init__.py
src/heartlib/pipelines/: music_generation.py
src/heartlib/utils/: __init__.py  tag_processor.py
web/backend/: .env.example  README.md  pyproject.toml
web/backend/app/: __init__.py  config.py  main.py  music_pipeline.py  voice_cloning.py
web/frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
web/frontend/src/: App.tsx  index.css
web/frontend/src/components/: AudioPlayer.tsx  AuthForm.tsx  GenerationForm.tsx  GenerationProgress.tsx  Header.tsx  SongActions.tsx  SongList.tsx
web/frontend/src/lib/: api.ts  utils.ts
