[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heartlib"
version = "0.1.0"
description = "A Python Library optimized for NVIDIA GB10 (DGX Spark)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "HeartMuLa Team", email = "heartmula.ai@gmail.com"}
]
dependencies = [
    "numpy>=2.0.2",
    "tqdm>=4.67.1",
    "traitlets>=5.7.1",
    "traittypes>=0.2.3",
    "transformers>=4.45.0",
    "tokenizers>=0.20.0",
    "ipykernel>=6.17.1",
    "einops>=0.8.1",
    "accelerate>=1.0.0",
    "bitsandbytes>=0.44.0",
    "vector-quantize-pytorch>=1.17.0",
    "modelscope>=1.20.0",
    "soundfile",
    "torch>=2.5.0",
    "torchaudio>=2.5.0",
    "torchvision>=0.20.0",
    "torchtune>=0.4.0",
    "torchao==0.9.0"
]
urls = { "homepage" = "https://heartmula.github.io/" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/nightly/cu128"]
index-strategy = "unsafe-best-match"
