[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heartlib"
version = "0.1.0"
description = "A Python Library optimized for NVIDIA GB10 (DGX Spark)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "HeartMuLa Team", email = "heartmula.ai@gmail.com"}
]
dependencies = [
    "numpy>=1.24.0,<2.0.0",  # pyarrow 14.x requires numpy 1.x
    "tqdm>=4.67.1",
    "traitlets>=5.7.1",
    "traittypes>=0.2.3",
    "transformers>=4.45.0",
    "tokenizers>=0.20.0",
    "ipykernel>=6.17.1",
    "einops>=0.8.1",
    "accelerate>=1.0.0",
    "bitsandbytes>=0.44.0",
    "vector-quantize-pytorch>=1.17.0",
    "modelscope>=1.20.0",
    "soundfile",
    "torchtune>=0.4.0",
    "torchao==0.9.0",
    # Fix pyarrow/datasets compatibility - pyarrow 23.0.0 removed PyExtensionType
    "pyarrow<15.0.0",
    "datasets>=2.14.0",
    # Triton for PyTorch optimizations (no version pin for ARM64 compatibility)
    "triton",
    # PyTorch - sourced from NVIDIA's index for ARM64 CUDA support (see [tool.uv.sources])
    "torch",
    "torchaudio",
]
urls = { "homepage" = "https://heartmula.github.io/" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"
explicit = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/nightly/cu128"

[tool.uv.sources]
# Force torch packages to come from NVIDIA's index for ARM64 CUDA support
torch = { index = "nvidia" }
torchaudio = { index = "nvidia" }
torchvision = { index = "nvidia" }
